@@ -56,6 +56,7 @@ public class NodeConfig {
 
   private final Path coreRootDirectory;
   private final String coresLocatorClass;
+  private final String coreSorterClass;
 
   private final Path solrDataHome;
 
@@ -122,6 +123,7 @@ public class NodeConfig {
       String nodeName,
       Path coreRootDirectory,
       String coresLocatorClass,
+      String coreSorterClass,
       Path solrDataHome,
       Integer booleanQueryMaxClauseCount,
       Path configSetBaseDirectory,
@@ -160,6 +162,7 @@ public class NodeConfig {
     this.nodeName = nodeName;
     this.coreRootDirectory = coreRootDirectory;
     this.coresLocatorClass = coresLocatorClass;
+    this.coreSorterClass = coreSorterClass;
     this.solrDataHome = solrDataHome;
     this.booleanQueryMaxClauseCount = booleanQueryMaxClauseCount;
     this.configSetBaseDirectory = configSetBaseDirectory;
@@ -263,6 +266,10 @@ public class NodeConfig {
 
   public String getCoresLocatorClass() {
     return this.coresLocatorClass;
+  }
+
+  public String getCoreSorterClass() {
+    return coreSorterClass;
   }
 
   /** Absolute. */
@@ -555,6 +562,7 @@ public class NodeConfig {
     private SolrResourceLoader loader;
     private Path coreRootDirectory;
     private String coresLocatorClass = DEFAULT_CORESLOCATORCLASS;
+    private String coreSorterClass = DEFAULT_CORESORTERCLASS;
     private Path solrDataHome;
     private Integer booleanQueryMaxClauseCount;
     private Path configSetBaseDirectory;
@@ -597,6 +605,7 @@ public class NodeConfig {
 
     private static final String DEFAULT_CORESLOCATORCLASS =
         "org.apache.solr.core.CorePropertiesLocator";
+    private static final String DEFAULT_CORESORTERCLASS = "org.apache.solr.core.CoreSorter";
     private static final String DEFAULT_ADMINHANDLERCLASS =
         "org.apache.solr.handler.admin.CoreAdminHandler";
     private static final String DEFAULT_INFOHANDLERCLASS =
@@ -638,6 +647,11 @@ public class NodeConfig {
 
     public NodeConfigBuilder setCoresLocatorClass(String coresLocatorClass) {
       this.coresLocatorClass = coresLocatorClass;
+      return this;
+    }
+
+    public NodeConfigBuilder setCoreSorterClass(String coreSorterClass) {
+      this.coreSorterClass = coreSorterClass;
       return this;
     }
 
@@ -859,6 +873,7 @@ public class NodeConfig {
           nodeName,
           coreRootDirectory,
           coresLocatorClass,
+          coreSorterClass,
           solrDataHome,
           booleanQueryMaxClauseCount,
           configSetBaseDirectory,
